<resources>
    <string name="app_name">WoodNetwork</string>
    <string name="login">登录</string>
    <string name="zhanghu">账户</string>
    <string name="mima">密码</string>
    <string name="mulianwang">木联网</string>
    <string name="wangjimima">忘记密码</string>
    <!--忘记密码-->
    <string name="getcode">获取验证码</string>
    <string name="code">验证码</string>
    <string name="newpassword">新密码</string>
    <string name="makesurepassword">确认密码</string>
    <string name="submit">提交</string>
    <!--商城首页-->
    <string name="shangcheng">商城</string>
    <string name="qiugou">求购</string>
    <string name="zixun">资讯</string>
    <string name="wode">我的</string>
    <string name="jiarugouwuche">加入购物车</string>
    <string name="lijigoumai">立即购买</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
